0.3.0
multiplatform & macos support