@@ -14,7 +14,7 @@ tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
 }
 
 group = "dev.willowyx"
-version = "0.2.0"
+version = "0.3.0"
 
 repositories {
     mavenCentral()
@@ -24,12 +24,17 @@ repositories {
 val lwjglVersion = "3.3.6"
 val os = org.gradle.internal.os.OperatingSystem.current()
 
-fun lwjglNatives(os: org.gradle.internal.os.OperatingSystem) = when {
+fun lwjglNatives(os: org.gradle.internal.os.OperatingSystem): String = when {
     os.isWindows -> "natives-windows"
     os.isLinux -> "natives-linux"
-    os.isMacOsX -> "natives-macos"
+    os.isMacOsX -> if (System.getProperty("os.arch") == "aarch64") {
+        "natives-macos-arm64"
+    } else {
+        "natives-macos"
+    }
     else -> error("Unsupported OS")
 }
+
 
 dependencies {
     implementation("com.github.SpaiR.imgui-java:imgui-java-app:v1.89.0")
@@ -50,6 +55,14 @@ application {
     mainClass.set("Main")
 }
 
+if (System.getProperty("os.name").lowercase().contains("mac")) {
+    afterEvaluate {
+        tasks.named<JavaExec>("run") {
+            jvmArgs = listOf("-XstartOnFirstThread", "--enable-native-access=ALL-UNNAMED")
+        }
+    }
+}
+
 tasks.test {
     useJUnitPlatform()
 }
@@ -61,7 +74,7 @@ tasks.register("generateVersionProperties") {
     doLast {
         val versionFile = outputDir.get().file("version.properties").asFile
         versionFile.parentFile.mkdirs()
-        versionFile.writeText("version=${project.version}\n")
+        versionFile.writeText("version=${project.version}\n")               // update api for deprecation
     }
 }
 
